#34614 : Readability issue in Bunker plan

--- a/ShiptechV2/assets/sass/themes/defaultweb/_dark_theme.scss
+++ b/ShiptechV2/assets/sass/themes/defaultweb/_dark_theme.scss
@@ -1230,10 +1230,12 @@ $denim: #5780A6;
 	#plan-date {
 		
 		.title {
-			color: $darkl4;
+			// color: $darkl4;
+			color: #E4F6FF;
 		}
 		.content {
-			color: $text_title;
+			// color: $text_title;
+			color:#FFFFFF;
 		}
 	}
 	#plan-status {
